--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* body { */
+/*     background-color: #DADADA; */
+/* } */
+/* body > .grid { */
+/*     height: 100%; */
+/* } */
+/* .image { */
+/*     margin-top: -100px; */
+/* } */
+/* .column { */
+/*     max-width: 450px; */
+/* } */
+
+body > #root > div {
+    height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+/* html { */
+/*     height: 100%; */
+/* } */
+
+/* body { */
+/*     min-height: 100%; */
+/*     margin: 0; */
+/*     padding: 0; */
+/* } */
+
+/* #root { */
+/*     height: 100%; */
+/* } */
