--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,161 @@
-/* body { */
-/*     background-color: #DADADA; */
-/* } */
-/* body > .grid { */
-/*     height: 100%; */
-/* } */
-/* .image { */
-/*     margin-top: -100px; */
-/* } */
-/* .column { */
-/*     max-width: 450px; */
-/* } */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: 0;
+}
 
-body > #root > div {
+html {
+    font-size: 62.5%;
+}
+
+#root {
+    font-size: 1.6rem;
+}
+
+body {
+    font-family: "Lato";
+    box-sizing: border-box;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.7;
+    color: #777;
+    padding: 3rem;
+}
+
+.page-home {
     height: 100vh;
 }
 
-/* html { */
-/*     height: 100%; */
-/* } */
+.home-page-header {
+    height: 95vh;
 
-/* body { */
-/*     min-height: 100%; */
-/*     margin: 0; */
-/*     padding: 0; */
-/* } */
+    background-image: linear-gradient(to right bottom,
+                                      rgb(239,234,172, 0.7),
+                                      rgba(226,234,8, 0.7)),
+                      url(img/hands.jpeg);
+    background-size: cover;
+    background-position: center;
+    clip-path: polygon(0 0, 100% 0,100% 75vh, 0 100% );
+    position: relative;
+}
 
-/* #root { */
-/*     height: 100%; */
-/* } */
+.logo-box{
+    position: absolute;
+    top: 3rem;
+    left: 3rem;
+}
+
+.logo{
+    height: 4.5rem;
+}
+
+.text-box {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -40%);
+    text-align: center;
+}
+
+.heading-primary {
+    color:  #fff;
+    text-transform: uppercase;
+    backface-visibility: hidden;
+    margin-bottom: 3.5rem;
+}
+
+.heading-primary-main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+    letter-spacing: 3.5rem;
+    animation-name: moveLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+
+.heading-primary-sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-left: 1rem;
+    letter-spacing: 1.5rem;
+    animation-name: moveRight;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+
+.login-form {
+    margin-bottom: 1rem;
+    width: 80%;
+    margin-left: 5rem;
+}
+
+@keyframes moveLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translate(1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0)
+        /* transform: translateX(11%); */
+    }
+}
+
+
+@keyframes moveRight {
+    0% {
+        opacity: 0;
+        transform: translateX(10rem);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0)
+    }
+}
+
+.btn-landing {
+    display: block;
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: .8rem 2rem;
+    display: inline-block;
+    border-radius: 10rem;
+    margin-left: .5rem;
+    transition: all .2s;
+    color: #777;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+}
+
+.btn-white {
+    background: #fff;
+    color: #777;
+    text-align: center;
+    margin-bottom: .5rem;
+    radius: 10rem;
+    text-align: center;
+}
