--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,10 @@ body {
 
 .home-page-header {
     height: 95vh;
+    background-blend-mode: hue;
 
-    background-image: linear-gradient(to right bottom,
-                                      rgb(239,234,172, 0.7),
-                                      rgba(226,234,8, 0.7)),
-                      url(img/hands.jpeg);
+    background-image: linear-gradient(to right bottom, #23eae6, #c7faf9),
+                      url(img/mehndi-2.jpg);
     background-size: cover;
     background-position: center;
     clip-path: polygon(0 0, 100% 0,100% 75vh, 0 100% );
