profile page done

--- a/src/style/profileCard.css
+++ b/src/style/profileCard.css
@@ -41,7 +41,7 @@
      background-size: cover;
      height: 23rem;
      background-image:  url(../img/shubhi.jpg);
-     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+     /* clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); */
  }
 
  .profile-card-heading {
